cabal-version:      3.0
name:               aoc23
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jason Chen
maintainer:         chezbgone@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
    build-depends:
        base ^>=4.17.0.0,
        array ^>=0.5.4.0,
        containers ^>=0.6.8,
        megaparsec ^>=9.6.1,
        mtl ^>=2.2.2,
        split ^>=0.2.4,
        text ^>=2.0.2,
        vector ^>=0.13.1.0,
    hs-source-dirs:   src
    default-language: GHC2021

executable aoc23
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        bytestring ^>=0.11.5.3,
        directory ^>= 1.3.7.1,
        dotenv ^>=0.11.0.2,
        http-conduit ^>=2.3.8.3,
        megaparsec ^>=9.6.1,
        text ^>=2.0.2,
        aoc23,

    hs-source-dirs:   exe
    default-language: GHC2021
